modified nav bar with background and stops before each section header when clicked/jumped to

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
 /* Desktop-first Approach */
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     background: #A6A6A8;
@@ -10,26 +13,30 @@ body {
 
 header {
     position: sticky;
-    top: .5em;
+    top: 0;
+    z-index: 1000;
+    background: #A6A6A8;
 }
 
 nav {
     display: flex;
+    align-items: center;
     justify-content: flex-end;
+    z-index: 1;
     gap: 2em;
     font-style:italic;
     font-size: 1.5rem;
 }
 
-a {
+header a {
     text-decoration: none;
     color: #125769;
     font-weight: bold;
     padding-right: 1em;
 }
 
-a:hover, a:focus {
-    color:#18748C
+header a:hover, header a:focus {
+    color:#479bb0
 }
 
 /* Section */
@@ -55,10 +62,11 @@ h1 {
 
 /* About */
 #About {
+    background:#A6A6A8;
     text-align: center;
-    padding: .5em .5em;
+    padding: 0 .5em 0 .5em;
     width: 90%;
-    margin: 0 auto;
+    margin: .5em auto; 
     font-size: 1.25rem;
 }
 
@@ -69,6 +77,7 @@ h2 {
 }
 
 section {
+    scroll-margin-top: 3.75em;
     margin-bottom: 2em;
     margin-left: .5em;
 }
@@ -139,6 +148,7 @@ ul {
 @media screen and (max-width: 1400px) {
   #Experience {
     background: #A6A6A8;
+    padding-bottom: 0;
   }
 
   #Experience ul {
@@ -174,8 +184,8 @@ ul {
 .icons {
     display: flex;
     flex-direction: row;
-    gap: .5em;
-    margin-left: .75em;
+    gap: 1em;
+    margin-left: 1em;
 }
 
 /* Footer */
@@ -214,7 +224,6 @@ ul {
         padding: .5em;
         border-radius: 5px;
         justify-content: center;
-        padding-left: 1.25em;
    }
 
     .AFReserve {
@@ -229,7 +238,12 @@ ul {
 }
 
 @media screen and (max-width: 730px) { /* Phone design */
+    header {
+        height: 3.75rem;
+    }
+    
     nav {
+        gap: .75em;
         flex-wrap: wrap;
         justify-content: center;
         font-size: 1.25rem;
@@ -255,6 +269,10 @@ ul {
     .li-2 {
         margin: 0 auto .5em auto;
         font-weight: bold;
+    }
+
+    #Experience li:last-child {
+        margin-bottom: 0;
     }
 } 
 
